<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.coursera.petsproject.ContactActivity"
    android:background="@color/background_card_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <include
                android:id="@+id/ltbContactAC"
                layout="@layout/layout_toolbar"/>

        <LinearLayout
            android:id="@+id/llContactAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/about_activity_margin"
            android:layout_below="@+id/ltbContactAC">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNameContactAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/contact_activity_margin_top">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietNameContactAC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_contact_name"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmailContactAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/contact_activity_margin_top">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietEmailContactAC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/activity_contact_email"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilMessageContactAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/contact_activity_margin_top">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietMessageContactAC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_contact_message"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnSendContactAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llContactAC"
            android:textSize="@dimen/about_activity_text_size"
            android:text="@string/activity_contact_btn_send"
            android:layout_marginTop="@dimen/contact_activity_btnSendContactAC_margin_top"
            android:onClick="sendEmail"
            android:theme="@style/BtnSend"/>


    </RelativeLayout>

</ScrollView>
